--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -10,9 +10,9 @@ services:
     depends_on:
      - "db"
     volumes:
-      - ./app:/var/www/html/app # DEV-ONLY: No need to rebuild source for modifying code
+      - ./app:/var/www/app # DEV-ONLY: No need to rebuild source for modifying code
       - ./public:/var/www/html # DEV-ONLY: No need to rebuild source for modifying code
-      - ./vendor:/var/www/html/vendor # DEV-ONLY: No need to rebuild source for modifying code
+      - ./vendor:/var/www/vendor # DEV-ONLY: No need to rebuild source for modifying code
     environment:
       PHP_ENVIRONMENT: development
       DOMAIN_NAME: http://mydomain.com
