--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
         "sort-packages": true
     },
     "require-dev": {
-        "flightphp/tracy-extensions": "*",
         "phpunit/phpunit": "^11.5",
         "squizlabs/php_codesniffer": "^3.0"
     },
@@ -28,6 +27,7 @@
         "flightphp/cache": "^1.1",
         "flightphp/core": "^3.17",
         "flightphp/session": "^0.3.0",
-        "tracy/tracy": "^2.9"
+        "tracy/tracy": "*",
+        "flightphp/tracy-extensions": "*"
     }
 }
