--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -14,6 +14,8 @@ services:
       - ./public:/var/www/html # DEV-ONLY: No need to rebuild source for modifying code
       - ./vendor:/var/www/vendor # DEV-ONLY: No need to rebuild source for modifying code
     environment:
+      UID: 1000
+      GID: 1000
       PHP_ENVIRONMENT: development
       DOMAIN_NAME: http://mydomain.com
       # Is this website public via a network?
