--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ pgdata
 composer.phar
 vendor/
 
+# Tracy log dumps
+app/log/
+
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
